# jc-dict

./: .packages  Cargo.toml  README.md  install.sh  pubspec.yaml  response.txt  snapcraft.yaml  wd-dict_0.3.0_amd64.snap  wd-dict_0.3.1_amd64.snap  wd.tar.xz
.dart_tool/: package_config.json  package_config_subset
.dart_tool/pub/incremental/wd_dict/: wd_dict.dart.incremental.dill
lib/: wd_dict.dart
src/: cambridge.rs  ecdict.rs  lib.rs  main test.rs  main.rs  youdao.rs
test/: wd_dict_test.dart
