[package]
name = "wd_dict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.0"
regex = "1.5.4"
colored = "2.0.0"
rustyline = "9.1.2"
dirs = "4.0.0"
rodio = "0.14.0"
mp3-duration = "0.1.10"
